# gitup

./: Cargo.toml
gitutils/: Cargo.toml
gitutils/src/: git.rs  lib.rs  main.rs
src/: commit_message.rs  git.rs  main.rs
